# seshat-sticky-note

./: .gitignore  README.md  Seshat Todo.spec  Seshat_ToDoNotes.spec  app.py  archive.py  data_history.py  data_manager.py  data_parser.py  db_merger_v2.py  delegates.py  effects.py  gm_moon.py  gm_planet.py  gm_sun.py  goal_map.py  input_logic.py  localization.py  main.py  menu_logic.py  obsidian_tasks_v3.json  pyproject.toml  style_logic.py  styles.py  task_tree.py  tree_core.py  tree_io.py  tree_logic.py  tree_menu.py  tree_progress.py  ui_setup.py  widgets.py  window_logic.py
.github/workflows/: ci.yml
tests/: test_logic.py
